unpackaged/main/default/objects/Lead/fields/EscalationElevationNotes__c.field-meta.xml
<CustomField>
    <fullName>EscalationElevationNotes__c</fullName>
    <description>Notes for an Escalation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes for an Esacalation</inlineHelpText>
    <label>Escalation/Elevation Notes</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>