unpackaged/main/default/objects/Lead/fields/Faq_Resend__c.field-meta.xml
<CustomField>
    <fullName>Faq_Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for re-sending digital faq's</inlineHelpText>
    <label>Faq Resend</label>
    <type>Checkbox</type>
</CustomField>