unpackaged/main/default/objects/Lead/fields/FAQ_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Sent_Date__c</fullName>
    <description>Denotes the date a physical FAQ was mailed to the lead.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FAQ Sent Date</label>
    <type>Date</type>
</CustomField>