unpackaged/main/default/objects/Lead/fields/FAQReceived__c.field-meta.xml
<CustomField>
    <fullName>FAQReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the Customer receive the FAQ mailed out?</description>
    <inlineHelpText>Did the Customer receive the FAQ mailed out?</inlineHelpText>
    <label>FAQ Received</label>
    <type>Checkbox</type>
</CustomField>