unpackaged/main/default/objects/Lead/fields/FAQRequested__c.field-meta.xml
<CustomField>
    <fullName>FAQRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did this Customer request that you send out a Frequently Asked Questions brochure by mail?</description>
    <inlineHelpText>Did this Customer request that you send out a Frequently Asked Questions brochure by mail?</inlineHelpText>
    <label>Paper FAQ Requested</label>
    <type>Checkbox</type>
</CustomField>