unpackaged/main/default/objects/Lead/fields/FH_Approved_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>FH_Approved_Discount_Amount__c</fullName>
    <inlineHelpText>For Financial Hardship Approval Template</inlineHelpText>
    <label>FH Approved Discount Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>