unpackaged/main/default/objects/Lead/fields/FH_Total_Program_Cost__c.field-meta.xml
<CustomField>
    <fullName>FH_Total_Program_Cost__c</fullName>
    <inlineHelpText>For Financial Hardship Approval Template</inlineHelpText>
    <label>FH Total Program Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>