unpackaged/main/default/objects/Lead/fields/FinancialHardshipApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>FinancialHardshipApplicationStatus__c</fullName>
    <description>Status of the FH Application</description>
    <inlineHelpText>Status of the FH Application</inlineHelpText>
    <label>Financial Hardship Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinancialHardshipApplicationStatus</valueSetName>
    </valueSet>
</CustomField>