unpackaged/main/default/objects/Lead/fields/FinancialHardshipDateTime__c.field-meta.xml
<CustomField>
    <fullName>FinancialHardshipDateTime__c</fullName>
    <description>What day/time did the Customer request the application for FH be sent out?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What day/time did the Customer request the application for FH be sent out?</inlineHelpText>
    <label>Financial Hardship Date/Time</label>
    <type>DateTime</type>
</CustomField>