unpackaged/main/default/objects/Lead/fields/First_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Referral_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Referral Date</label>
    <type>DateTime</type>
</CustomField>