unpackaged/main/default/objects/Lead/fields/FormStack_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>FormStack_Health_Insurance__c</fullName>
    <description>Picklist used in formstack forms to display customer friendly client name values instead of back end values</description>
    <inlineHelpText>Picklist used in formstack forms to display customer friendly client name values instead of back end values</inlineHelpText>
    <label>FormStack Health Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Formstack_Health_Insurance</valueSetName>
    </valueSet>
</CustomField>