unpackaged/main/default/objects/Lead/fields/Free_Session_Attended__c.field-meta.xml
<CustomField>
    <fullName>Free_Session_Attended__c</fullName>
    <label>Free Session Attended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>