unpackaged/main/default/objects/Lead/fields/FUABoosterCandidate__c.field-meta.xml
<CustomField>
    <fullName>FUABoosterCandidate__c</fullName>
    <description>Does this Customer qualify to participate in our Booster programs?</description>
    <inlineHelpText>Does this Customer qualify to participate in our Booster programs?</inlineHelpText>
    <label>FUA/Booster Candidate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValue</valueSetName>
    </valueSet>
</CustomField>