unpackaged/main/default/objects/Lead/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Customer Gender

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Customer Gender</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>