unpackaged/main/default/objects/Lead/fields/Group_Plan_Sponsor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Group_Plan_Sponsor_Formula__c</fullName>
    <formula>Group_PlanSponsor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group/Plan Sponsor Formula</label>
    <type>Text</type>
</CustomField>