unpackaged/main/default/objects/Lead/fields/Group_PlanSponsor__c.field-meta.xml
<CustomField>
    <fullName>Group_PlanSponsor__c</fullName>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Group / Plan Sponsor</inlineHelpText>
    <label>Group/Plan Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>