unpackaged/main/default/objects/Lead/fields/Hard_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Hard_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box sets Dialer Status to "Abilto Removed", Customer Status to "Closed_Benefits", and Marketo Sync Filter to unchecked. These fields cannot be updated once this box is checked.</description>
    <inlineHelpText>Checking this box sets Dialer Status to "Abilto Removed", Customer Status to "Closed_Benefits", and Marketo Sync Filter to unchecked. These fields cannot be updated once this box is checked.</inlineHelpText>
    <label>Hard Opt Out</label>
    <type>Checkbox</type>
</CustomField>