unpackaged/main/default/objects/Lead/fields/HardshipQuestionnaire__c.field-meta.xml
<CustomField>
    <fullName>HardshipQuestionnaire__c</fullName>
    <description>How was the Financial Hardship information sent out/received by the customer?</description>
    <inlineHelpText>How was the Financial Hardship information sent out/received by the customer?</inlineHelpText>
    <label>Hardship Questionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HardshipQuestionnaire</valueSetName>
    </valueSet>
</CustomField>