unpackaged/main/default/objects/Lead/fields/Health_Plan_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Unique_Identifier__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Health Plan Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>