unpackaged/main/default/objects/Lead/fields/Healthy_Living__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Living__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Healthy Living</label>
    <type>Checkbox</type>
</CustomField>