unpackaged/main/default/objects/Lead/fields/High_Deductible_Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>High_Deductible_Health_Plan__c</fullName>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <label>High Deductible Health Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDHP Without HSA</fullName>
            </value>
            <value>
                <fullName>Non HDHP</fullName>
            </value>
            <value>
                <fullName>HDHP HSA Unknown</fullName>
            </value>
            <value>
                <fullName>HDHP With HSA</fullName>
            </value>
            <value>
                <fullName>None HDHP</fullName>
                <isActive>false</isActive>
                <label>None HDHP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>