unpackaged/main/default/objects/Lead/fields/HIPAAVerification__c.field-meta.xml
<CustomField>
    <fullName>HIPAAVerification__c</fullName>
    <description>Did the Customer pass the HIPAA verification using DOB and Address?</description>
    <inlineHelpText>Did the Customer pass the HIPAA verification using DOB and Address?</inlineHelpText>
    <label>HIPAA VERIFICATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValue</valueSetName>
    </valueSet>
</CustomField>