unpackaged/main/default/objects/Lead/fields/Horizon_Lookup_sets__c.field-meta.xml
<CustomField>
    <fullName>Horizon_Lookup_sets__c</fullName>
    <label>Horizon Lookup sets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H1</fullName>
            </value>
            <value>
                <fullName>H2</fullName>
            </value>
            <value>
                <fullName>H3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>