unpackaged/main/default/objects/Lead/fields/How_can_we_help_you_Web_Form__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_help_you_Web_Form__c</fullName>
    <description>Input from formstack web form contact us page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Input from formstack web form contact us page</inlineHelpText>
    <label>How can we help you? (Web Form)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>