unpackaged/main/default/objects/Lead/fields/IC_Scheduled_Hour_Formula__c.field-meta.xml
<CustomField>
    <fullName>IC_Scheduled_Hour_Formula__c</fullName>
    <description>Extracts the hour from the date/time IC Scheduled Field</description>
    <formula>MID( TEXT(  DateTimeICScheduled__c - 4/24), 12, 2)</formula>
    <inlineHelpText>Extracts the hour from the date/time IC Scheduled Field</inlineHelpText>
    <label>IC Scheduled Hour Formula</label>
    <type>Text</type>
</CustomField>