unpackaged/main/default/objects/Lead/fields/IC_Treatment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>IC_Treatment_Scheduled__c</fullName>
    <label>IC Treatment Scheduled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment Scheduled</fullName>
            </value>
            <value>
                <fullName>Treatment Not Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>