unpackaged/main/default/objects/Lead/fields/IC_Treatment_Scheduled_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>IC_Treatment_Scheduled_Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>updated with current date / time when value of IC Treatment Scheduled is changed</inlineHelpText>
    <label>IC Treatment Scheduled Time Stamp</label>
    <type>DateTime</type>
</CustomField>