unpackaged/main/default/objects/Lead/fields/InsideSalesID__c.field-meta.xml
<CustomField>
    <fullName>InsideSalesID__c</fullName>
    <description>InsideSales ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>InsideSales ID Number (Unique Identifier)</inlineHelpText>
    <label>InsideSales ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>