unpackaged/main/default/objects/Lead/fields/Insurance_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Eligible</label>
    <type>Checkbox</type>
</CustomField>