unpackaged/main/default/objects/Lead/fields/Joyable_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Joyable_Indicator__c</fullName>
    <formula>IF(
   Joyable_Origin__c,
   IMAGE('/sfc/servlet.shepherd/version/download/0681R00000Kp6AE', 'Red Joyable Text'),
   'N/A'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joyable Indicator</label>
    <type>Text</type>
</CustomField>