unpackaged/main/default/objects/Lead/fields/Joyable_Origin__c.field-meta.xml
<CustomField>
    <fullName>Joyable_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>indicates if the origin of the lead was from Joyable and is now opting into an ableto program</inlineHelpText>
    <label>Joyable Origin</label>
    <type>Checkbox</type>
</CustomField>