unpackaged/main/default/objects/Lead/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Language Preference of the Customer</inlineHelpText>
    <label>LANGUAGE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>