unpackaged/main/default/objects/Lead/fields/Last_Eligibility_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Eligibility_Check_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Eligibility Check Date</label>
    <type>Date</type>
</CustomField>