unpackaged/main/default/objects/Lead/fields/Last_Referral_Date_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Date_Age__c</fullName>
    <formula>TODAY () - DATEVALUE(  Last_Referral_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Referral Date Age</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>