unpackaged/main/default/objects/Lead/fields/LastReferalDate_90__c.field-meta.xml
<CustomField>
    <fullName>LastReferalDate_90__c</fullName>
    <formula>Last_Referral_Date__c - 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastReferalDate-90</label>
    <type>DateTime</type>
</CustomField>