unpackaged/main/default/objects/Lead/fields/Lead_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Formula__c</fullName>
    <description>Created for workflow rule that reassigns lead to Ready status</description>
    <formula>Owner:User.FirstName</formula>
    <label>Lead Owner Formula</label>
    <type>Text</type>
</CustomField>