unpackaged/main/default/objects/Lead/fields/LFDDate__c.field-meta.xml
<CustomField>
    <fullName>LFDDate__c</fullName>
    <description>Test field for last referral date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LFDDate</label>
    <type>Date</type>
</CustomField>