unpackaged/main/default/objects/Lead/fields/ListID__c.field-meta.xml
<CustomField>
    <fullName>ListID__c</fullName>
    <description>List Identification - connected to records to notate when/where the record came from.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List ID</inlineHelpText>
    <label>List ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>