unpackaged/main/default/objects/Lead/fields/Mailer_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Mailer_Campaigns__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>text field for data team to populate</inlineHelpText>
    <label>Mailer Campaigns</label>
    <length>200</length>
    <type>Text</type>
</CustomField>