unpackaged/main/default/objects/Lead/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <formula>IF(CONTAINS(UPPER(Group_PlanSponsor__c), "FOX ENTERTAINMENT")||(CONTAINS(UPPER(Group_PlanSponsor__c), "FACEBOOK")), "TRUE","FALSE")</formula>
    <label>Manual Override</label>
    <type>Text</type>
</CustomField>