unpackaged/main/default/objects/Lead/fields/Marketing_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>indicates if an email was captured manually</inlineHelpText>
    <label>Marketing Email Opt In</label>
    <type>Checkbox</type>
</CustomField>