unpackaged/main/default/objects/Lead/fields/Marketo_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Acquisition_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketo Acquisition Date</label>
    <type>DateTime</type>
</CustomField>