unpackaged/main/default/objects/Lead/fields/Marketo_Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Acquisition_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketo Acquisition Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>