unpackaged/main/default/objects/Lead/fields/Marketo_Dialer__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Dialer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SF Field updated by Marketo for when a email has been sent out to check this box as true in order the update the dialer status. Several workflows may be associated with this function</inlineHelpText>
    <label>Marketo Dialer</label>
    <type>Checkbox</type>
</CustomField>