unpackaged/main/default/objects/Lead/fields/Marketo_Dialer_Date_Time_stamp__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Dialer_Date_Time_stamp__c</fullName>
    <formula>IF(  Marketo_Dialer__c  = TRUE, NOW(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketo Dialer Date / Time stamp</label>
    <type>DateTime</type>
</CustomField>