unpackaged/main/default/objects/Lead/fields/Marketo_Dialer_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Dialer_Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketo Dialer Time Stamp</label>
    <type>DateTime</type>
</CustomField>