unpackaged/main/default/objects/Lead/fields/Marketo_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Lead_Score__c</fullName>
    <label>Marketo Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>