unpackaged/main/default/objects/Lead/fields/Marketo_Sync_Filter__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Sync_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only leads that have this checked will sync to Marketo</inlineHelpText>
    <label>Marketo Sync Filter</label>
    <type>Checkbox</type>
</CustomField>