unpackaged/main/default/objects/Lead/fields/Mens_Health__c.field-meta.xml
<CustomField>
    <fullName>Mens_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Mens Health</label>
    <type>Checkbox</type>
</CustomField>