unpackaged/main/default/objects/Lead/fields/Missed_IC_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Missed_IC_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field is populated from missed IC looker report 
https://looker.ableto.com/looks/6628
leads are updated to reflect this field as true and comparative analyses is done to see if they have been redialed.</description>
    <inlineHelpText>field is populated from missed IC looker report.</inlineHelpText>
    <label>Missed IC Follow Up</label>
    <type>Checkbox</type>
</CustomField>