unpackaged/main/default/objects/Lead/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Monthly</label>
    <type>Checkbox</type>
</CustomField>