unpackaged/main/default/objects/Lead/fields/NCM_Email__c.field-meta.xml
<CustomField>
    <fullName>NCM_Email__c</fullName>
    <formula>ReferrerName__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCM Email</label>
    <type>Text</type>
</CustomField>