unpackaged/main/default/objects/Lead/fields/NCM_Team_Association__c.field-meta.xml
<CustomField>
    <fullName>NCM_Team_Association__c</fullName>
    <formula>ReferrerName__r.Care_Manager_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCM Team Association</label>
    <type>Text</type>
</CustomField>