unpackaged/main/default/objects/Lead/fields/Neustar_phone_activity_code__c.field-meta.xml
<CustomField>
    <fullName>Neustar_phone_activity_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>for code produced by neustar</inlineHelpText>
    <label>Neustar phone activity code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>