unpackaged/main/default/objects/Lead/fields/Newsletter_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>marketo email preference center</inlineHelpText>
    <label>Newsletter Email Opt In</label>
    <type>Checkbox</type>
</CustomField>