unpackaged/main/default/objects/Lead/fields/No_HDHP__c.field-meta.xml
<CustomField>
    <fullName>No_HDHP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No HDHP</label>
    <type>Checkbox</type>
</CustomField>