unpackaged/main/default/objects/Lead/fields/No_IC_Availability__c.field-meta.xml
<CustomField>
    <fullName>No_IC_Availability__c</fullName>
    <inlineHelpText>indicates if you are not able to schedule the IC in EnableTo</inlineHelpText>
    <label>No IC Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Scheduling Treatment Resolved</fullName>
            </value>
            <value>
                <fullName>Ticked Submitted</fullName>
            </value>
            <value>
                <fullName>Ticket Submitted / Callback Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>