unpackaged/main/default/objects/Lead/fields/No_TH_Availability__c.field-meta.xml
<CustomField>
    <fullName>No_TH_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to use when there is no availability with Therapists</inlineHelpText>
    <label>No TH Availability</label>
    <type>Checkbox</type>
</CustomField>