unpackaged/main/default/objects/Lead/fields/No_TH_Availability_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>No_TH_Availability_Date_and_Time__c</fullName>
    <description>indicates the date and time when the individual check the "No TH Availability" field. Works with the No TH Availability workflow and field update</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>indicates the date and time when the individual check the "No TH Availability" field.</inlineHelpText>
    <label>No TH Availability Date and Time</label>
    <type>DateTime</type>
</CustomField>