unpackaged/main/default/objects/Lead/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes Section for use by the AbilTo Specialist

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Notes Section for use by the AbilTo Specialist</inlineHelpText>
    <label>NOTES</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>