unpackaged/main/default/objects/Lead/fields/OkaytoleaveVM__c.field-meta.xml
<CustomField>
    <fullName>OkaytoleaveVM__c</fullName>
    <description>Did you get permission from the customer to leave detailed messages?

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Did you get permission from the customer to leave detailed messages?</inlineHelpText>
    <label>Okay to leave a Voicemail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValue</valueSetName>
    </valueSet>
</CustomField>