unpackaged/main/default/objects/Lead/fields/OOP_Met__c.field-meta.xml
<CustomField>
    <fullName>OOP_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for use with the hdhp indicator formula populated by the data team</inlineHelpText>
    <label>OOP Met?</label>
    <type>Checkbox</type>
</CustomField>