unpackaged/main/default/objects/Lead/fields/Opened_Digital_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Opened_Digital_FAQ__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marketo controls this and populates true if the individual opens the email</inlineHelpText>
    <label>Opened Digital FAQ</label>
    <type>Checkbox</type>
</CustomField>