unpackaged/main/default/objects/Lead/fields/Opened_Marketo_Email__c.field-meta.xml
<CustomField>
    <fullName>Opened_Marketo_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this field will indicate if an email from a marketo campaign has been opened. This is tied to the workflow "update weighted ranking" and the weighted ranking formula. This is a read only field</inlineHelpText>
    <label>Opened Marketo Email</label>
    <type>Checkbox</type>
</CustomField>