unpackaged/main/default/objects/Lead/fields/OriginalProgram__c.field-meta.xml
<CustomField>
    <fullName>OriginalProgram__c</fullName>
    <description>What was the Original Program that this Customer had participated in?</description>
    <inlineHelpText>What was the Original Program that this Customer had participated in?</inlineHelpText>
    <label>Original Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>