unpackaged/main/default/objects/Lead/fields/OriginalSource__c.field-meta.xml
<CustomField>
    <fullName>OriginalSource__c</fullName>
    <description>How did we initially come across this customer/customer's information? Data, Inbound, Self, etc...</description>
    <inlineHelpText>How did we initially come across this customer/customer's information? Data, Inbound, Self, etc...</inlineHelpText>
    <label>Original Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source</valueSetName>
    </valueSet>
</CustomField>