unpackaged/main/default/objects/Lead/fields/Owner_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Agent_ID__c</fullName>
    <formula>Owner:User.InContact_AgentID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Agent ID</label>
    <type>Text</type>
</CustomField>